--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <h3>Contact Information</h3>
     <p>Email Address: Elsagranados01@icloud.com<br><br>
        Portfolio: <a href="https://lindagranados.github.io/elsag_portfolio/portfolio.html">Click Here </a> <br><br>
-       Resume:<a href="Images/_Dr.%20Idriss-Social%20Media%20Manager%20Resume.pdf"> Click Here</a> 
+       Resume:<a href="https://github.com/ItsElsaG/ItsElsaG.github.io/blob/main/Images/_Dr.%20Idriss-Social%20Media%20Manager%20Resume.pdf"> Click Here</a> 
        <br><br>
        Linkedin: <a href="https://www.linkedin.com/in/elsagranados/">https://www.linkedin.com/in/elsagranados/</a>
     </p>
