--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <h3>Contact Information</h3>
     <p>Email Address: Elsagranados01@icloud.com<br><br>
        Portfolio: <a href="https://lindagranados.github.io/elsag_portfolio/portfolio.html">Click Here </a> <br><br>
-       Resume:<a href="Images/_Dr.Idriss-Social Media Manager Resume.pdf" target="_blank"> Click Here</a> 
+       Resume:<a href="Images\_Dr. Idriss-Social Media Manager Resume.pdf" target="_blank"> Click Here</a> 
        <br><br>
        Linkedin: <a href="https://www.linkedin.com/in/elsagranados/">https://www.linkedin.com/in/elsagranados/</a>
     </p>
