--- a/index.html
+++ b/index.html
@@ -40,11 +40,9 @@
     </p>
     <br><br>
     <h3>Contact Information</h3>
-    <p>Email Address: Elsagranados01@icloud.com<br><br>
-       Portfolio: <a href="https://lindagranados.github.io/elsag_portfolio/portfolio.html">Click Here </a> <br><br>
-       Resume: <a href="Images/Elsa_Resume.pdf"> Click Here</a> 
-       <br><br>
-       Linkedin: <a href="https://www.linkedin.com/in/elsagranados/">https://www.linkedin.com/in/elsagranados/</a>
-    </p>
+    <p>Email Address: Elsagranados01@icloud.com</p>
+    <p>Portfolio: <a href="https://lindagranados.github.io/elsag_portfolio/portfolio.html">Click Here</a></p>
+    <p>Resume: <a href="Images/Elsa_Resume.pdf" target="_blank">Click Here</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/elsagranados/">Click Here</a></p>
 </body>
 </html>
